Thunderbird CSS filter definition popup menu jumpy fixes

--- a/data/integration/thunderbird/tb10X_nscdeChrome.css
+++ b/data/integration/thunderbird/tb10X_nscdeChrome.css
@@ -95,6 +95,13 @@ menupopup > :is(menu, menuitem):not([disabled="true"])[_moz-menuactive] {
 }
 
 /* 100+ */
+#filterListDialog menupopup > :is(menu, menuitem):not([disabled="true"])[_moz-menuactive],
+#FilterEditor menupopup > :is(menu, menuitem):not([disabled="true"])[_moz-menuactive] {
+  margin-left: 3px !important;
+  margin-right: 3px !important;
+} 
+
+/* 100+ */
 .panel-arrowcontainer .menupopup-arrowscrollbox,
 .menupopup-arrowscrollbox,
 .panel-arrowbox+slot {
